# cpprate

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: make_release.yml
config/: CMakeLists-bxzstr.txt.in  CMakeLists-cxxargs.txt.in  CMakeLists-eigen.txt.in  CMakeLists-googletest.txt.in  cpprate_blas_config.hpp.in  cpprate_mpi_config.hpp.in  cpprate_openmp_config.hpp.in
include/: CovarianceMatrix.hpp  CppRateRes.hpp  CppRateRes_mpi.hpp  MpiHandler.hpp  RATE_res.hpp  flat_triangular.hpp  fullrank.hpp  lowrank.hpp  lowrank_mpi.hpp  svd_wrapper.hpp  util.hpp
src/: cpprate.cpp  cpprate_mpi.cpp
test/include/: CppRateRes_test.hpp  cpprate_integration_test.hpp  design_matrix_unit_test.hpp  fullrank_integration_test.hpp  fullrank_unit_test.hpp  kld_unit_test.hpp  lowrank_integration_test.hpp  lowrank_unit_test.hpp  svd_unit_test.hpp  transformed_results_unit_test.hpp
test/src/: CppRateRes_test.cpp  cpprate_integration_test.cpp  design_matrix_unit_test.cpp  fullrank_integration_test.cpp  fullrank_unit_test.cpp  kld_unit_test.cpp  lowrank_integration_test.cpp  lowrank_unit_test.cpp  svd_unit_test.cpp  transformed_results_unit_test.cpp
